--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
           >
           <ul class="page-header-list">
             <li class="page-header-item">
-              <a class="nav-link" href="./index.html">Studio</a>
+              <a class="nav-link current" href="./index.html">Studio</a>
             </li>
             <li class="page-header-item">
               <a class="nav-link" href="">Portfolio</a>
