--- a/index.html
+++ b/index.html
@@ -65,33 +65,53 @@
         <div class="container">
           <h2 class="visually-hidden">Chapter</h2>
           <ul class="chapter-list">
-            <li class="chapter-item">
-              <h3 class="chapter-tittle">Strategy</h3>
-              <p class="chapter-text">
-                Our goal is to identify the business problem to walk away with
-                the perfect and creative solution.
-              </p>
-            </li>
-            <li class="chapter-item">
-              <h3 class="chapter-tittle">Punctuality</h3>
-              <p class="chapter-text">
-                Bring the key message to the brand's audience for the best price
-                within the shortest possible time.
-              </p>
-            </li>
-            <li class="chapter-item">
-              <h3 class="chapter-tittle">Diligence</h3>
-              <p class="chapter-text">
-                Research and confirm brands that present the strongest digital
-                growth opportunities and minimize risk.
-              </p>
-            </li>
-            <li class="chapter-item">
-              <h3 class="chapter-tittle">Technologies</h3>
-              <p class="chapter-text">
-                Design practice focused on digital experiences. We bring forth a
-                deep passion for problem-solving.
-              </p>
+              <li class="chapter-item">
+                <div class="chapter-icon">
+                <svg class="icons" width="64" height="64">
+                  <use href="./images/icons.svg#icon-antenna"></use>
+                </svg>
+              </div>
+                <h3 class="chapter-tittle">Strategy</h3>
+                <p class="chapter-text">
+                  Our goal is to identify the business problem to walk away with
+                  the perfect and creative solution.
+                </p>
+              </li>
+
+              <li class="chapter-item">
+                <div class="chapter-icon">
+                <svg class="icons" width="64" height="64">
+                  <use href="./images/icons.svg#icon-clock"></use>
+                </div>
+                <h3 class="chapter-tittle">Punctuality</h3>
+                <p class="chapter-text">
+                  Bring the key message to the brand's audience for the best price
+                  within the shortest possible time.
+                </p>
+              </li>
+              <li class="chapter-item">
+                <div class="chapter-icon">
+                <svg class="icons" width="64" height="64">
+                  <use href="./images/icons.svg#icon-diagram"></use>    
+                </svg>
+              </div>
+                <h3 class="chapter-tittle">Diligence</h3>
+                <p class="chapter-text">
+                  Research and confirm brands that present the strongest digital
+                  growth opportunities and minimize risk.
+                </p>
+              </li>
+              <li class="chapter-item">
+                <div class="chapter-icon">
+                <svg class="icons" width="64" height="64">
+                  <use href="./images/icons.svg#icon-astronaut"></use>
+                </div>
+                <h3 class="chapter-tittle">Technologies</h3>
+                <p class="chapter-text">
+                  Design practice focused on digital experiences. We bring forth a
+                  deep passion for problem-solving.
+                </p>
+
             </li>
           </ul>
         </div>
@@ -243,5 +263,9 @@
         </p>
       </div>
     </footer>
+
+
+
+
   </body>
 </html>
