--- a/index.html
+++ b/index.html
@@ -131,6 +131,28 @@
                 <h3 class="ourteam-name">Mark Guerrero</h3>
                 <p class="ourteam-text">Product Designer</p>
               </div>
+              <div class="soc-team">
+                <a class="soc-link" href="">
+                  <svg class="link" width="16" height="16">
+                  <use href="./images/icons.svg#icon-instagram"></use>
+                </svg>
+              </a>
+                <a class="soc-link" href="">
+                  <svg class="icons" width="16" height="16">
+                  <use href="./images/icons.svg#icon-twitter"></use>
+                </svg>
+                </a>
+                <a class="soc-link" href="">
+                  <svg class="icons" width="16" height="16">
+                  <use href="./images/icons.svg#icon-facebook"></use>
+                </svg>
+                </a>
+                <a class="soc-link" href="">
+                  <svg class="icons" width="16" height="16">
+                  <use href="./images/icons.svg#icon-linkedin"></use>
+                  </svg>
+                </a>
+              </div>
             </li>
             <li class="ourteam-item">
               <img
@@ -142,6 +164,28 @@
               <div class="ourteam-about">
                 <h3 class="ourteam-name">Tom Ford</h3>
                 <p class="ourteam-text">Frontend Developer</p>
+              </div>
+              <div class="soc-team">
+                <a class="soc-link" href="">
+                  <svg class="link" width="16" height="16">
+                  <use href="./images/icons.svg#icon-instagram"></use>
+                </svg>
+              </a>
+                <a class="soc-link" href="">
+                  <svg class="icons" width="16" height="16">
+                  <use href="./images/icons.svg#icon-twitter"></use>
+                </svg>
+                </a>
+                <a class="soc-link" href="">
+                  <svg class="icons" width="16" height="16">
+                  <use href="./images/icons.svg#icon-facebook"></use>
+                </svg>
+                </a>
+                <a class="soc-link" href="">
+                  <svg class="icons" width="16" height="16">
+                  <use href="./images/icons.svg#icon-linkedin"></use>
+                  </svg>
+                </a>
               </div>
             </li>
             <li class="ourteam-item">
@@ -155,6 +199,27 @@
                 <h3 class="ourteam-name">Camila Garcia</h3>
                 <p class="ourteam-text">Marketing</p>
               </div>
+              <div class="soc-team">
+                <a class="soc-link" href="">
+                  <svg class="icons" width="16" height="16">
+                  <use href="./images/icons.svg#icon-instagram"></use>
+                </svg>
+              </a>
+                <a class="soc-link" href="">
+                  <svg class="icons" width="16" height="16">
+                  <use href="./images/icons.svg#icon-twitter"></use>
+                </svg>
+                </a>
+                <a class="soc-link" href="">
+                  <svg class="icons" width="16" height="16">
+                  <use href="./images/icons.svg#icon-facebook"></use>
+                </svg>
+                </a>
+                <a class="soc-link" href="">
+                  <svg class="icons" width="16" height="16">
+                  <use href="./images/icons.svg#icon-linkedin"></use>
+                  </svg>
+                </a></div>
             </li>
             <li class="ourteam-item">
               <img
@@ -166,6 +231,28 @@
               <div class="ourteam-about">
                 <h3 class="ourteam-name">Daniel Wilson</h3>
                 <p class="ourteam-text">UI Designer</p>
+              </div>
+              <div class="soc-team">
+                <a class="soc-link" href="">
+                  <svg class="icons" width="16" height="16">
+                  <use href="./images/icons.svg#icon-instagram"></use>
+                </svg>
+              </a>
+                <a class="soc-link" href="">
+                  <svg class="icons" width="16" height="16">
+                  <use href="./images/icons.svg#icon-twitter"></use>
+                </svg>
+                </a>
+                <a class="soc-link" href="">
+                  <svg class="icons" width="16" height="16">
+                  <use href="./images/icons.svg#icon-facebook"></use>
+                </svg>
+                </a>
+                <a class="soc-link" href="">
+                  <svg class="icons" width="16" height="16">
+                  <use href="./images/icons.svg#icon-linkedin"></use>
+                  </svg>
+                </a>
               </div>
             </li>
           </ul>
