--- a/index.html
+++ b/index.html
@@ -132,26 +132,36 @@
                 <p class="ourteam-text">Product Designer</p>
               </div>
               <div class="soc-team">
-                <a class="soc-link" href="">
-                  <svg class="link" width="16" height="16">
-                  <use href="./images/icons.svg#icon-instagram"></use>
-                </svg>
-              </a>
-                <a class="soc-link" href="">
-                  <svg class="icons" width="16" height="16">
-                  <use href="./images/icons.svg#icon-twitter"></use>
-                </svg>
-                </a>
-                <a class="soc-link" href="">
-                  <svg class="icons" width="16" height="16">
-                  <use href="./images/icons.svg#icon-facebook"></use>
-                </svg>
-                </a>
-                <a class="soc-link" href="">
-                  <svg class="icons" width="16" height="16">
-                  <use href="./images/icons.svg#icon-linkedin"></use>
-                  </svg>
-                </a>
+                <ul class="soc-list">
+                  <li>
+                    <a class="soc-link" href="">
+                      <svg class="link" width="16" height="16">
+                        <use href="./images/icons.svg#icon-instagram"></use>
+                      </svg>
+                    </a>
+                  </li>
+                  <li>
+                    <a class="soc-link" href="">
+                      <svg class="icons" width="16" height="16">
+                        <use href="./images/icons.svg#icon-twitter"></use>
+                      </svg>
+                    </a>
+                  </li>
+                  <li>
+                    <a class="soc-link" href="">
+                      <svg class="icons" width="16" height="16">
+                        <use href="./images/icons.svg#icon-facebook"></use>
+                      </svg>
+                    </a>
+                  </li>
+                  <li>
+                    <a class="soc-link" href="">
+                      <svg class="icons" width="16" height="16">
+                        <use href="./images/icons.svg#icon-linkedin"></use>
+                      </svg>
+                    </a>
+                  </li>
+                </ul>
               </div>
             </li>
             <li class="ourteam-item">
@@ -166,26 +176,36 @@
                 <p class="ourteam-text">Frontend Developer</p>
               </div>
               <div class="soc-team">
-                <a class="soc-link" href="">
-                  <svg class="link" width="16" height="16">
-                  <use href="./images/icons.svg#icon-instagram"></use>
-                </svg>
-              </a>
-                <a class="soc-link" href="">
-                  <svg class="icons" width="16" height="16">
-                  <use href="./images/icons.svg#icon-twitter"></use>
-                </svg>
-                </a>
-                <a class="soc-link" href="">
-                  <svg class="icons" width="16" height="16">
-                  <use href="./images/icons.svg#icon-facebook"></use>
-                </svg>
-                </a>
-                <a class="soc-link" href="">
-                  <svg class="icons" width="16" height="16">
-                  <use href="./images/icons.svg#icon-linkedin"></use>
-                  </svg>
-                </a>
+                <ul class="soc-list">
+                  <li>
+                    <a class="soc-link" href="">
+                      <svg class="link" width="16" height="16">
+                        <use href="./images/icons.svg#icon-instagram"></use>
+                      </svg>
+                    </a>
+                  </li>
+                  <li>
+                    <a class="soc-link" href="">
+                      <svg class="icons" width="16" height="16">
+                        <use href="./images/icons.svg#icon-twitter"></use>
+                      </svg>
+                    </a>
+                  </li>
+                  <li>
+                    <a class="soc-link" href="">
+                      <svg class="icons" width="16" height="16">
+                        <use href="./images/icons.svg#icon-facebook"></use>
+                      </svg>
+                    </a>
+                  </li>
+                  <li>
+                    <a class="soc-link" href="">
+                      <svg class="icons" width="16" height="16">
+                        <use href="./images/icons.svg#icon-linkedin"></use>
+                      </svg>
+                    </a>
+                  </li>
+                </ul>
               </div>
             </li>
             <li class="ourteam-item">
@@ -199,27 +219,38 @@
                 <h3 class="ourteam-name">Camila Garcia</h3>
                 <p class="ourteam-text">Marketing</p>
               </div>
-              <div class="soc-team">
-                <a class="soc-link" href="">
-                  <svg class="icons" width="16" height="16">
-                  <use href="./images/icons.svg#icon-instagram"></use>
-                </svg>
-              </a>
-                <a class="soc-link" href="">
-                  <svg class="icons" width="16" height="16">
-                  <use href="./images/icons.svg#icon-twitter"></use>
-                </svg>
-                </a>
-                <a class="soc-link" href="">
-                  <svg class="icons" width="16" height="16">
-                  <use href="./images/icons.svg#icon-facebook"></use>
-                </svg>
-                </a>
-                <a class="soc-link" href="">
-                  <svg class="icons" width="16" height="16">
-                  <use href="./images/icons.svg#icon-linkedin"></use>
-                  </svg>
-                </a></div>
+             <div class="soc-team">
+                <ul class="soc-list">
+                  <li>
+                    <a class="soc-link" href="">
+                      <svg class="link" width="16" height="16">
+                        <use href="./images/icons.svg#icon-instagram"></use>
+                      </svg>
+                    </a>
+                  </li>
+                  <li>
+                    <a class="soc-link" href="">
+                      <svg class="icons" width="16" height="16">
+                        <use href="./images/icons.svg#icon-twitter"></use>
+                      </svg>
+                    </a>
+                  </li>
+                  <li>
+                    <a class="soc-link" href="">
+                      <svg class="icons" width="16" height="16">
+                        <use href="./images/icons.svg#icon-facebook"></use>
+                      </svg>
+                    </a>
+                  </li>
+                  <li>
+                    <a class="soc-link" href="">
+                      <svg class="icons" width="16" height="16">
+                        <use href="./images/icons.svg#icon-linkedin"></use>
+                      </svg>
+                    </a>
+                  </li>
+                </ul>
+              </div>
             </li>
             <li class="ourteam-item">
               <img
@@ -233,26 +264,36 @@
                 <p class="ourteam-text">UI Designer</p>
               </div>
               <div class="soc-team">
-                <a class="soc-link" href="">
-                  <svg class="icons" width="16" height="16">
-                  <use href="./images/icons.svg#icon-instagram"></use>
-                </svg>
-              </a>
-                <a class="soc-link" href="">
-                  <svg class="icons" width="16" height="16">
-                  <use href="./images/icons.svg#icon-twitter"></use>
-                </svg>
-                </a>
-                <a class="soc-link" href="">
-                  <svg class="icons" width="16" height="16">
-                  <use href="./images/icons.svg#icon-facebook"></use>
-                </svg>
-                </a>
-                <a class="soc-link" href="">
-                  <svg class="icons" width="16" height="16">
-                  <use href="./images/icons.svg#icon-linkedin"></use>
-                  </svg>
-                </a>
+                <ul class="soc-list">
+                  <li>
+                    <a class="soc-link" href="">
+                      <svg class="link" width="16" height="16">
+                        <use href="./images/icons.svg#icon-instagram"></use>
+                      </svg>
+                    </a>
+                  </li>
+                  <li>
+                    <a class="soc-link" href="">
+                      <svg class="icons" width="16" height="16">
+                        <use href="./images/icons.svg#icon-twitter"></use>
+                      </svg>
+                    </a>
+                  </li>
+                  <li>
+                    <a class="soc-link" href="">
+                      <svg class="icons" width="16" height="16">
+                        <use href="./images/icons.svg#icon-facebook"></use>
+                      </svg>
+                    </a>
+                  </li>
+                  <li>
+                    <a class="soc-link" href="">
+                      <svg class="icons" width="16" height="16">
+                        <use href="./images/icons.svg#icon-linkedin"></use>
+                      </svg>
+                    </a>
+                  </li>
+                </ul>
               </div>
             </li>
           </ul>
