--- a/index.html
+++ b/index.html
@@ -111,7 +111,6 @@
                   Design practice focused on digital experiences. We bring forth a
                   deep passion for problem-solving.
                 </p>
-
             </li>
           </ul>
         </div>
@@ -131,28 +130,28 @@
                 <h3 class="ourteam-name">Mark Guerrero</h3>
                 <p class="ourteam-text">Product Designer</p>
                 <ul class="soc-list">
-                  <li>
+                  <li class="soc-item">
                     <a class="soc-link" href="">
                       <svg class="link" width="16" height="16">
                         <use href="./images/icons.svg#icon-instagram"></use>
                       </svg>
                     </a>
                   </li>
-                  <li>
+                  <li class="soc-item">
                     <a class="soc-link" href="">
                       <svg class="icons" width="16" height="16">
                         <use href="./images/icons.svg#icon-twitter"></use>
                       </svg>
                     </a>
                   </li>
-                  <li>
+                  <li class="soc-item">
                     <a class="soc-link" href="">
                       <svg class="icons" width="16" height="16">
                         <use href="./images/icons.svg#icon-facebook"></use>
                       </svg>
                     </a>
                   </li>
-                  <li>
+                  <li class="soc-item">
                     <a class="soc-link" href="">
                       <svg class="icons" width="16" height="16">
                         <use href="./images/icons.svg#icon-linkedin"></use>
@@ -172,20 +171,20 @@
                 <h3 class="ourteam-name">Tom Ford</h3>
                 <p class="ourteam-text">Frontend Developer</p>
                 <ul class="soc-list">
-                  <li>
+                  <li class="soc-item">
                     <a class="soc-link" href="">
                       <svg class="link" width="16" height="16">
                         <use href="./images/icons.svg#icon-instagram"></use>
                       </svg>
                     </a>
                   </li>
-                  <li>
+                  <li class="soc-item">
                     <a class="soc-link" href="">
                       <svg class="icons" width="16" height="16">
                         <use href="./images/icons.svg#icon-twitter"></use>
                       </svg>
                     </a>
-                  </li>
+                  </li class="soc-item">
                   <li>
                     <a class="soc-link" href="">
                       <svg class="icons" width="16" height="16">
@@ -193,7 +192,7 @@
                       </svg>
                     </a>
                   </li>
-                  <li>
+                  <li class="soc-item">
                     <a class="soc-link" href="">
                       <svg class="icons" width="16" height="16">
                         <use href="./images/icons.svg#icon-linkedin"></use>
@@ -214,28 +213,28 @@
                 <h3 class="ourteam-name">Camila Garcia</h3>
                 <p class="ourteam-text">Marketing</p>
                 <ul class="soc-list">
-                  <li>
+                  <li class="soc-item">
                     <a class="soc-link" href="">
                       <svg class="link" width="16" height="16">
                         <use href="./images/icons.svg#icon-instagram"></use>
                       </svg>
                     </a>
                   </li>
-                  <li>
+                  <li class="soc-item">
                     <a class="soc-link" href="">
                       <svg class="icons" width="16" height="16">
                         <use href="./images/icons.svg#icon-twitter"></use>
                       </svg>
                     </a>
                   </li>
-                  <li>
+                  <li class="soc-item">
                     <a class="soc-link" href="">
                       <svg class="icons" width="16" height="16">
                         <use href="./images/icons.svg#icon-facebook"></use>
                       </svg>
                     </a>
                   </li>
-                  <li>
+                  <li class="soc-item">
                     <a class="soc-link" href="">
                       <svg class="icons" width="16" height="16">
                         <use href="./images/icons.svg#icon-linkedin"></use>
@@ -256,26 +255,33 @@
                 <h3 class="ourteam-name">Daniel Wilson</h3>
                 <p class="ourteam-text">UI Designer</p>
                 <ul class="soc-list">
-                  <a class="soc-link" href="">
-                    <svg class="icons" width="16" height="16">
-                      <use href="./images/icons.svg#icon-instagram"></use>
-                    </svg>
-                  </a>
-                  <a class="soc-link" href="">
-                    <svg class="icons" width="16" height="16">
-                      <use href="./images/icons.svg#icon-twitter"></use>
-                    </svg>
-                  </a>
-                  <a class="soc-link" href="">
-                    <svg class="icons" width="16" height="16">
-                      <use href="./images/icons.svg#icon-facebook"></use>
-                    </svg>
-                  </a>
-                  <a class="soc-link" href="">
-                    <svg class="icons" width="16" height="16">
-                      <use href="./images/icons.svg#icon-linkedin"></use>
-                    </svg>
-                  </a>
+                  <li class="soc-item">
+                    <a class="soc-link" href="">
+                      <svg class="icons" width="16" height="16">
+                        <use href="./images/icons.svg#icon-instagram"></use>
+                      </svg>
+                    </a>
+                  </li>
+                  <li class="soc-item">
+                    <a class="soc-link" href="">
+                      <svg class="icons" width="16" height="16">
+                        <use href="./images/icons.svg#icon-twitter"></use>
+                      </a>
+                  </li>
+                  <li class="soc-item">
+                    <a class="soc-link" href="">
+                      <svg class="icons" width="16" height="16">
+                        <use href="./images/icons.svg#icon-facebook"></use>
+                      </svg>
+                    </a>
+                  </li>
+                  <li class="soc-item">
+                    <a class="soc-link" href="">
+                      <svg class="icons" width="16" height="16">
+                        <use href="./images/icons.svg#icon-linkedin"></use>
+                      </svg>
+                    </a>
+                  </li>
                 </ul>
               </div>
             </li>
