--- a/index.html
+++ b/index.html
@@ -77,7 +77,6 @@
                   the perfect and creative solution.
                 </p>
               </li>
-
               <li class="chapter-item">
                 <div class="chapter-icon">
                 <svg class="icons" width="64" height="64">
@@ -132,7 +131,7 @@
                 <ul class="soc-list">
                   <li class="soc-item">
                     <a class="soc-link" href="">
-                      <svg class="link" width="16" height="16">
+                      <svg class="icons" width="16" height="16">
                         <use href="./images/icons.svg#icon-instagram"></use>
                       </svg>
                     </a>
@@ -173,7 +172,7 @@
                 <ul class="soc-list">
                   <li class="soc-item">
                     <a class="soc-link" href="">
-                      <svg class="link" width="16" height="16">
+                      <svg class="icons" width="16" height="16">
                         <use href="./images/icons.svg#icon-instagram"></use>
                       </svg>
                     </a>
@@ -215,7 +214,7 @@
                 <ul class="soc-list">
                   <li class="soc-item">
                     <a class="soc-link" href="">
-                      <svg class="link" width="16" height="16">
+                      <svg class="icons" width="16" height="16">
                         <use href="./images/icons.svg#icon-instagram"></use>
                       </svg>
                     </a>
