--- a/index.html
+++ b/index.html
@@ -292,72 +292,91 @@
           <h2 class="portfolio-tittle">Our Portfolio</h2>
           <ul class="portfolio-list">
             <li class="portfolio-item">
-              <img
-                src="./images/bankingimg.jpg"
-                width="360"
-                height="300"
-                alt="Banking App"
-              />
+              <div class="portfolio-cover-text-wrap">
+                <img
+                  src="./images/bankingimg.jpg"
+                  width="360"
+                  height="300"
+                  alt="Banking App"
+                />
+                <p class="portfolio-cover-text">14 Stylish and User-Friendly App Design Concepts · Task Manager App · Calorie Tracker App · Exotic Fruit Ecommerce App · Cloud Storage App</p>
+              </div>
+
               <div class="portfolio-about">
                 <h3 class="portfolio-name">Banking App</h3>
                 <p class="porfolio-text">App</p>
               </div>
             </li>
             <li class="portfolio-item">
-              <img
-                src="./images/cashless.jpg"
-                width="360"
-                height="300"
-                alt="Cashless Payment"
-              />
+              <div class="portfolio-cover-text-wrap">
+                <img
+                  src="./images/cashless.jpg"
+                  width="360"
+                  height="300"
+                  alt="Cashless Payment"
+                />
+                <p class="portfolio-cover-text">14 Stylish and User-Friendly App Design Concepts · Task Manager App · Calorie Tracker App · Exotic Fruit Ecommerce App · Cloud Storage App</p>
+              </div>
               <div class="portfolio-about">
                 <h3 class="portfolio-name">Cashless Payment</h3>
                 <p class="porfolio-text">Marketing</p>
               </div>
             </li>
             <li class="portfolio-item">
-              <img
-                src="./images/meditationapp.jpg"
-                width="360"
-                height="300"
-                alt="Meditation App"
-              />
+              <div class="portfolio-cover-text-wrap">
+                <img
+                  src="./images/meditationapp.jpg"
+                  width="360"
+                  height="300"
+                  alt="Meditation App"
+                />
+                <p class="portfolio-cover-text">14 Stylish and User-Friendly App Design Concepts · Task Manager App · Calorie Tracker App · Exotic Fruit Ecommerce App · Cloud Storage App</p>
+              </div>
               <div class="portfolio-about">
                 <h3 class="portfolio-name">Meditation App</h3>
                 <p class="porfolio-text">App</p>
               </div>
             </li>
             <li class="portfolio-item">
-              <img
-                src="./images/taxi.jpg"
-                width="360"
-                height="300"
-                alt="Taxi Service"
-              />
+              <div class="portfolio-cover-text-wrap">
+                <img
+                  src="./images/taxi.jpg"
+                  width="360"
+                  height="300"
+                  alt="Taxi Service"
+                />
+                <p class="portfolio-cover-text">14 Stylish and User-Friendly App Design Concepts · Task Manager App · Calorie Tracker App · Exotic Fruit Ecommerce App · Cloud Storage App</p>
+              </div>
               <div class="portfolio-about">
                 <h3 class="portfolio-name">Taxi Service</h3>
                 <p class="porfolio-text">Marketing</p>
               </div>
             </li>
             <li class="portfolio-item">
-              <img
-                src="./images/screen.jpg"
-                alt="Screen Illustrations"
-                width="360"
-                height="300"
-              />
+              <div class="portfolio-cover-text-wrap">
+                <img
+                  src="./images/screen.jpg"
+                  alt="Screen Illustrations"
+                  width="360"
+                  height="300"
+                />
+                <p class="portfolio-cover-text">14 Stylish and User-Friendly App Design Concepts · Task Manager App · Calorie Tracker App · Exotic Fruit Ecommerce App · Cloud Storage App</p>
+              </div>
               <div class="portfolio-about">
                 <h3 class="portfolio-name">Screen Illustrations</h3>
                 <p class="porfolio-text">Design</p>
               </div>
             </li>
             <li class="portfolio-item">
-              <img
-                src="./images/onlinecall.jpg"
-                alt="Online Courses"
-                width="360"
-                height="300"
-              />
+              <div class="portfolio-cover-text-wrap">
+                <img
+                  src="./images/onlinecall.jpg"
+                  alt="Online Courses"
+                  width="360"
+                  height="300"
+                />
+                <p class="portfolio-cover-text">14 Stylish and User-Friendly App Design Concepts · Task Manager App · Calorie Tracker App · Exotic Fruit Ecommerce App · Cloud Storage App</p>
+              </div>
               <div class="portfolio-about">
                 <h3 class="portfolio-name">Online Courses</h3>
                 <p class="porfolio-text">Marketing</p>
