--- a/index.html
+++ b/index.html
@@ -397,6 +397,39 @@
           digital marketing & growth solutions.
         </p>
       </div>
+      <div class="soc-footer">
+        <p class="soc-media">Social media</p>
+        <ul class="soc-footer-list">
+                  <li class="soc-footer-item">
+                    <a class="soc-footer-link" href="">
+                      <svg class="icons" width="24" height="24">
+                        <use href="./images/icons.svg#icon-instagram"></use>
+                      </svg>
+                    </a>
+                  </li>
+                  <li class="soc-footer-item">
+                    <a class="soc-footer-link" href="">
+                      <svg class="icons" width="24" height="24">
+                        <use href="./images/icons.svg#icon-twitter"></use>
+                      </svg>
+                    </a>
+                  </li>
+                  <li class="soc-footer-item">
+                    <a class="soc-footer-link" href="">
+                      <svg class="icons" width="24" height="24">
+                        <use href="./images/icons.svg#icon-facebook"></use>
+                      </svg>
+                    </a>
+                  </li>
+                  <li class="soc-footer-item">
+                    <a class="soc-footer-link" href="">
+                      <svg class="icons" width="24" height="24">
+                        <use href="./images/icons.svg#icon-linkedin"></use>
+                      </svg>
+                    </a>
+                  </li>
+                </ul>
+      </div>
     </footer>
 
 
