--- a/index.html
+++ b/index.html
@@ -389,47 +389,48 @@
 
     <footer class="footer">
       <div class="container footer-container">
-        <a class="logo logo-footer" href="./index.html"
+        <div class="foter-logo">
+          <a class="logo logo-footer" href="./index.html"
           >web<span class="logo-footer-studio">Studio</span></a
         >
         <p class="footer-text">
           Increase the flow of customers and sales for your business with
           digital marketing & growth solutions.
         </p>
-      </div>
-      <div class="soc-footer">
-        <p class="soc-media">Social media</p>
-        <ul class="soc-footer-list">
-                  <li class="soc-footer-item">
-                    <a class="soc-footer-link" href="">
-                      <svg class="icons" width="24" height="24">
-                        <use href="./images/icons.svg#icon-instagram"></use>
-                      </svg>
-                    </a>
-                  </li>
-                  <li class="soc-footer-item">
-                    <a class="soc-footer-link" href="">
-                      <svg class="icons" width="24" height="24">
-                        <use href="./images/icons.svg#icon-twitter"></use>
-                      </svg>
-                    </a>
-                  </li>
-                  <li class="soc-footer-item">
-                    <a class="soc-footer-link" href="">
-                      <svg class="icons" width="24" height="24">
-                        <use href="./images/icons.svg#icon-facebook"></use>
-                      </svg>
-                    </a>
-                  </li>
-                  <li class="soc-footer-item">
-                    <a class="soc-footer-link" href="">
-                      <svg class="icons" width="24" height="24">
-                        <use href="./images/icons.svg#icon-linkedin"></use>
-                      </svg>
-                    </a>
-                  </li>
-                </ul>
-      </div>
+        </div>
+        <div class="soc-footer">
+          <p class="soc-media">Social media</p>
+          <ul class="soc-footer-list">
+            <li class="soc-footer-item">
+              <a class="soc-footer-link" href="">
+                <svg class="icons" width="24" height="24">
+                  <use href="./images/icons.svg#icon-instagram"></use>
+                </svg>
+              </a>
+            </li>
+            <li class="soc-footer-item">
+              <a class="soc-footer-link" href="">
+                <svg class="icons" width="24" height="24">
+                  <use href="./images/icons.svg#icon-twitter"></use>
+                </a>
+              </li>
+              <li class="soc-footer-item">
+                <a class="soc-footer-link" href="">
+                  <svg class="icons" width="24" height="24">
+                    <use href="./images/icons.svg#icon-facebook"></use>
+                  </svg>
+                </a>
+              </li>
+              <li class="soc-footer-item">
+                <a class="soc-footer-link" href="">
+                  <svg class="icons" width="24" height="24">
+                    <use href="./images/icons.svg#icon-linkedin"></use>
+                  </svg>
+                </a>
+              </li>
+            </ul>
+          </div>
+        </div>
     </footer>
 
 
