--- a/index.html
+++ b/index.html
@@ -389,7 +389,7 @@
 
     <footer class="footer">
       <div class="container footer-container">
-        <div class="foter-logo">
+        <div class="foter-webstudio">
           <a class="logo logo-footer" href="./index.html"
           >web<span class="logo-footer-studio">Studio</span></a
         >
