--- a/index.html
+++ b/index.html
@@ -53,8 +53,8 @@
       </div>
     </header>
     <main>
-      <section class="section">
-        <div class="container page-hero-section">
+      <section class="section page-hero-section">
+        <div class="container">
           <h1 class="page-hero-tittle">
             Effective Solutions for Your Business
           </h1>
